# black-jack

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  Justfile  LICENSE  LICENSE-MIT  Makefile  README.md  README.md.skt.md  build.rs
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: rust.yml
benches/: bench_marks.rs
black-jack-proc-macro/: Cargo.toml
black-jack-proc-macro/src/: lib.rs
black-jack-proc-macro/tests/: test_dataframe_basics.rs
src/: alterations.rs  enums.rs  indexing.rs  lib.rs  macros.rs  prelude.rs  row.rs  traits.rs
src/containers/: mod.rs
src/dataframe/: dataframe_groupby.rs  io.rs  mod.rs  traits.rs
src/enums/: mod.rs  overloaders.rs
src/error/: mod.rs
src/funcs/: mod.rs
src/series/: mod.rs  operators.rs  overloaders.rs  rolling.rs  series_groupby.rs  traits.rs  variants.rs
src/tests/: alteration_tests.rs  fixtures.rs  mod.rs
src/tests/dataframe_tests/: mod.rs
src/tests/macro_tests/: mod.rs
src/tests/series_tests/: mod.rs
src/traits/: dataframe_groupby.rs  groupby.rs  mod.rs  series_groupby.rs
tests/: data_type_tests.rs  dataframe_tests.rs  series_tests.rs  test_csv.rs  test_dataframe.rs  test_dataframe_basics.rs  test_dataframe_iterations.rs  test_dataframe_selectors.rs  test_joins.rs  test_series.rs  test_series_indexes.rs  test_series_mods.rs
tests/data/: basic_csv.csv  medium_csv.csv
