[package]
name = "black-jack"
version = "0.2.0-alpha"
edition = "2018"
authors = ["Miles Granger <miles59923@gmail.com>"]
description = "DataFrame / Series / general data processing in Rust"
repository = "https://github.com/milesgranger/black-jack"
readme = "README.md"
exclude = ["/.gitignore", ".travis.yml", ".cargo/config"]
license-file = "LICENSE"

[badges]
travis-ci = { repository = "milesgranger/black-jack", branch = "master" }

[lib]
name = "blackjack"
proc-macro = true

[dependencies]
quote = "^1.0"
syn = { version = "^1.0", features = ["full", "extra-traits"] }
proc-macro2 = "^1.0"

[[bench]]
name = "bench_marks"
harness = false
