[package]
name = "black-jack"
version = "0.2.0-alpha"
edition = "2018"
authors = ["Miles Granger <miles59923@gmail.com>"]
description = "DataFrame / Series / general data processing in Rust"
repository = "https://github.com/milesgranger/black-jack"
readme = "README.md"
exclude = ["/.gitignore", ".travis.yml", ".cargo/config"]
license-file = "LICENSE"

[badges]
travis-ci = { repository = "milesgranger/black-jack", branch = "master" }

[lib]
name = "blackjack"

[workspace]
members = [
    ".",
    "black-jack-proc-macro"
]

[dependencies]
anyhow = "1"
black-jack-proc-macro = {path = "black-jack-proc-macro"}
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }


[[bench]]
name = "bench_marks"
harness = false
